
mpi i/o
mod_nctools.F

add p_sigma_distribution
mod_input.F, mod_main.F, mod_setup.F

Add adjust river ts option (average or maximum)
adjust_ts.F, mod_input.F, mod_main.F

Remove diffusive flux between wet and dry nodes
adv_q.F, adv_s.F, mod_dye.F,  mod_scal.F, mod_wqm.F

Add SST MLD assimilation
internal_step.F, mod_assim.F, mod_input.F, mod_main.F,  mod_ncdio.F,  namelist.F, mod_mld_rho.F

Add vortex force
adv_uv_edge_gcn.F, adv_uv_edge_gcy.F, fvcom.F, internal_step.F,  mod_ncdio.F,  mod_wave_current_interaction.F

Add vegetation module
adv_uv_edge_gcn.F, extuv_edge.F, fvcom.F, internal_step.F, mod_gotm.F, mod_ncdio.F, namelist.F, open_all.F, swancom1.F, swancom2.F, swanmain.F, swanpre1.F, swmod1.F, swmod2.F, vdif_q.F, mod_vegetation.F, makefile

Add mod sediment heat flux
bcond_gcn.F, vdif_ts.F, mod_heatflux_sediment.F

Add mod_vector_projection
internal_step.F,  fvcom.F,  mod_main.F,  mod_ncdio.F,  mod_vector_projection.F, makefile

add isonb3
grid_metrics.F,  mod_main.F,  mod_semi_implicit.F

Remove +1 from dim IOBCN
mod_obcs.F, mod_scal.F, mod_sed_cstms.F

Add ice_in
bcond_gcn.F

Mod_nesting index change
mod_nesting.F

Fixes for t assimilation; abs current, OI_TS limit_control, and add ramp
mod_assim.F

Gotm initialise u_taub to 0
mod_gotm.F

Implement spherical and wet-dry in non-hydro
mod_non_hydro.F

Add offset freshwater flux in mpdata and single precision fix for stability in mod_wqm
mod_wqm.F

Update KDMAX from 5 to 3 based on MELLOR(2015)
mod_wave_current_interaction.F 

Remove quatorial coriolis adjustment in setup
mod_setup.F
