@@ -112,6 +112,8 @@ mod_wqm.F
 Update KDMAX from 5 to 3 based on MELLOR(2015)
 mod_wave_current_interaction.F 
 
-Remove quatorial coriolis adjustment in setup
+Remove coriolis adjustment for very small values in setup
 mod_setup.F
 
+Adjustment to XFLUX in spherical
+adv_uv_edge_gcn.F
